--- a/prueba.html
+++ b/prueba.html
@@ -3,7 +3,10 @@
 <head>
     <title>Document</title>
 </head>
-<p> Hola mundo </p>
+<body>
+    <p> Hola mundo </p>
+</body>
+
     
 </body>
 </html>
